<resources>
    <string name="app_name">My Courses</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="name">Nurdiansyah</string>
    <string name="tutor">Tutor</string>
    <string name="my_schedules">My Schedules</string>
    <string name="share_my_knowledge">Share My Knowledge</string>
    <string name="copyright">Copyright Mr.Nurd @2021, image by unsplash</string>
    <string name="detail_name">Sandi</string>
    <string name="status_detail">Student</string>
    <string name="subject">Subject</string>
    <string name="address">Address</string>
    <string name="number">Number</string>
</resources>